<resources>
    <string name="app_name">DiscExchange</string>
    <string name="a_disc">A Disc</string>
    <string name="a_disc_description">a disc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="feed">Feed</string>
    <string name="chat">Chat</string>
    <string name="profil">Profil</string>
    <string name="mine_annonser">Mine annonser</string>
    <string name="popul_re">Populære</string>
    <string name="butikk">Butikk</string>
    <string name="handlekurv">Handlekurv</string>
    <string name="logg_ut">Logg ut</string>
</resources>